fix font-weight for better contrast & accessibility

--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -121,7 +121,7 @@ body.user-is-tabbing *:focus {
     color: $color_error_text;
     background-color: $color_error_bkg;
     font-size: 1.2em;
-    font-weight: 100;
+    font-weight: 300;
     margin: 15px auto;
     border: 1px solid $color_error_text;
     padding: 7px;
@@ -139,7 +139,7 @@ body.user-is-tabbing *:focus {
     color: $color_success_text;
     background-color: $color_success_bkg;
     font-size: 1.2em;
-    font-weight: 100;
+    font-weight: 300;
     margin: 15px auto;
     border: 1px solid $color_success_text;
     padding: 7px;
