--- a/client/src/styles/_connections.scss
+++ b/client/src/styles/_connections.scss
@@ -94,7 +94,7 @@
     flex: 1 0 auto;
     width: 25%;
     font-size: 1.1em;
-    font-weight: 100;
+    font-weight: 300;
     padding-left: 3px;
 
 
